Fixed bug with map being too small

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -12,3 +12,8 @@
     object-position: center;
   }
 }
+
+.mapboxgl-canvas {
+  width: 100% !important;
+  height: 400px !important;
+}
