--- a/app/assets/stylesheets/pages/_vans-index.scss
+++ b/app/assets/stylesheets/pages/_vans-index.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.map-area {
+  margin-top: 20px;
+}
+
 .hidden {
-  display:none;
+  display: none;
 }
